Added in next/previous/back to top and table of contents links

--- a/book/a-brief-introduction-to-solr.html
+++ b/book/a-brief-introduction-to-solr.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -315,6 +325,9 @@
   Note the </span><span class="c19 c15">solr.BoolField</span><span class="c2 c15 c10">&nbsp;will also allow boolean value replacement (along with optional prefixes and suffixes).</span></p><p class="c22"><span class="c2 c10 c7">Line 28:</span></p><p class="c22 c57"><span class="c2 c15 c10">For brevity, additional field type definitions were removed and replaced with a comment.</span></p><p class="c22 c24"><span class="c2 c10 c7">Line 32:</span></p><p class="c22 c57"><span class="c2 c15 c10">The end of the Solr managed schema.</span></p><p class="c22 c25"><span class="c2 c15 c10"></span></p><p class="c22"><span class="c2 c15 c10">What fields should I facet on?</span></p><p class="c22"><span class="c2 c15 c10">If you are going to facet on a field, then the field type should be stored and indexed, but not analysed</span></p><h2 class="c43 c24" id="h.vhljd62pzgim"><span class="c50 c10 c7">The Solr Configuration File</span></h2><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c22 c25"><span class="c2 c15 c10"></span></p><p class="c48 c25 c99"><span class="c55 c28 c115 c7"></span></p><p class="c99 c48"><span class="c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="quick-start---the-5-steps.html#h.b0bn9es43b7b" class="button small">Previous Page &laquo; <span>(Quick Start - The 5 Steps)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="getting-started.html#h.64jkm4cbn5ec" class="button small">Next Page &raquo; <span>(Getting Started)</span></a></li>
 						</ul>
 					</footer>
 				</section>
