--- a/book/code-flow.html
+++ b/book/code-flow.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -134,6 +144,9 @@
   There are two major code flows within the Panl library, the generator and the server.</span></p><p class="c22 c24"><span>The main entry point for the code is </span><span class="c28 c15">com.synapticloop.panl.Main</span><span class="c2 c15 c10">&nbsp;class.</span></p><p class="c22 c24"><span class="c2 c15 c10">For brevity, the base package of com.synapticloop.panl has been excluded from the following class hierarchies.</span></p><h2 class="c43 c24" id="h.63egmk4hx945"><span class="c50 c10 c7">Server</span></h2><p class="c22 c24"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 584.00px; height: 154.00px;"><img alt="" src="images/image15.png" style="width: 584.00px; height: 154.00px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><p class="c22 c24"><span class="c2 c15 c10">Main</span></p><p class="c22 c63"><span class="c2 c15 c10">invokes server.PanlServer</span></p><p class="c22 c108"><span class="c2 c15 c10">Parses properties</span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="design-considerations.html#h.csay7u24guqn" class="button small">Previous Page &laquo; <span>(Design Considerations)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="epilogue.html#h.b36b3ykcfa0f" class="button small">Next Page &raquo; <span>(Epilogue)</span></a></li>
 						</ul>
 					</footer>
 				</section>
