--- a/book/epilogue.html
+++ b/book/epilogue.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -132,6 +142,9 @@
 </ul><p class="c22"><span class="c2 c15 c10">All of this has made the product a better one, and if nothing else, I thoroughly recommend writing a book, or at the very least a HOW-TO on whatever project you are working on.</span></p><p class="c22 c25"><span class="c2 c15 c10"></span></p><p class="c22"><span class="c2 c15 c10">In any case, I hope that you enjoy - and more importantly, implement and use - the Panl server in your project.</span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c99 c48"><span class="c28 c7 c115">~ ~ ~ * ~ ~ ~</span></p><p class="c22 c25"><span class="c2 c15 c10"></span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="code-flow.html#h.zggugnpwo64" class="button small">Previous Page &laquo; <span>(Code Flow)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="appendices.html#h.125dqxoposk9" class="button small">Next Page &raquo; <span>(Appendices)</span></a></li>
 						</ul>
 					</footer>
 				</section>
