--- a/book/getting-started.html
+++ b/book/getting-started.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -388,6 +398,9 @@
 </ul><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c99 c48"><span class="c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="a-brief-introduction-to-solr.html#h.v78svwab541o" class="button small">Previous Page &laquo; <span>(A Brief Introduction To Solr)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="panl-configuration.html#h.9nwfc0wsp1xn" class="button small">Next Page &raquo; <span>(Panl Configuration)</span></a></li>
 						</ul>
 					</footer>
 				</section>
