--- a/book/how-it-all-fits-together.html
+++ b/book/how-it-all-fits-together.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -124,6 +134,9 @@
 					<h1 class="c103 c48 c24" id="h.aghsxpd74ami"><span class="c55 c123 c10 c7">How It All Fits Together</span></h1><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c99 c48 c24"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 592.00px; height: 419.33px;"><img alt="" src="images/image17.png" style="width: 592.00px; height: 419.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></p><h2 class="c48 c24 c233" id="h.gihshhnrf774"><span class="c50 c10 c7">Collections And FieldSets</span></h2><h2 class="c48 c24 c200" id="h.uryz7c8p25g0"><span style="overflow: hidden; display: inline-block; margin: 0.00px 0.00px; border: 0.00px solid #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 440.66px; height: 417.33px;"><img alt="" src="images/image28.png" style="width: 440.66px; height: 417.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span></h2>
 					<footer>
 						<ul class="actions">
+							<li><a href="panl-configuration.html#h.9nwfc0wsp1xn" class="button small">Previous Page &laquo; <span>(Panl Configuration)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href=".html#h.z5vpcna6f61d" class="button small">Next Page &raquo; <span>()</span></a></li>
 						</ul>
 					</footer>
 				</section>
