--- a/book/integrating-an-existing-solr-schema.html
+++ b/book/integrating-an-existing-solr-schema.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -200,6 +210,9 @@
 </table><h3 class="c37 c126 c24" id="h.98b5721m1lvp"><span class="c65 c10 c7"></span></h3><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c99 c48"><span class="c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="the-panl-response-object.html#h.ptcvgc4pgkql" class="button small">Previous Page &laquo; <span>(The Panl Response Object)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="properties-quick-reference.html#h.jmuei3ge5v9m" class="button small">Next Page &raquo; <span>(Properties Quick Reference)</span></a></li>
 						</ul>
 					</footer>
 				</section>
