--- a/book/panl-cookbook.html
+++ b/book/panl-cookbook.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -124,6 +134,9 @@
 					<h1 class="c103 c48 c24" id="h.4d4gkix5isxn"><span class="c55 c123 c10 c7">Panl Cookbook</span></h1><p class="c22 c24"><span class="c2 c15 c10">Quick configuration options</span></p><h2 class="c43 c24" id="h.oye0enbbw4qh"><span class="c50 c10 c7">Additional Datasets</span></h2><p class="c22 c24"><span class="c2 c15 c10">Included within the distribution are some additional datasets</span></p><h2 class="c43 c24" id="h.nh30xrpo1klb"><span class="c50 c10 c7">Linking to the latest products/releases</span></h2><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="json-object-keys-quick-reference.html#h.kbwzd9tukbab" class="button small">Previous Page &laquo; <span>(JSON Object Keys Quick Reference)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="design-considerations.html#h.csay7u24guqn" class="button small">Next Page &raquo; <span>(Design Considerations)</span></a></li>
 						</ul>
 					</footer>
 				</section>
