--- a/book/quick-start---the-5-steps.html
+++ b/book/quick-start---the-5-steps.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -293,6 +303,9 @@
 </ol><p class="c113 c48"><span>Open the link </span><span class="c27"><a class="c6" href="http://localhost:8181/panl-results-viewer/">http://localhost:8181/panl-results-viewer/</a></span><span>&nbsp;in your favourite browser, choose a collection/fieldset and search, facet, sort, paginate and view the results</span></p><p class="c22"><span class="c2 c10 c7">Need help understanding what the Panl server is doing?</span></p><p class="c22"><span>Open the link </span><span class="c27"><a class="c6" href="http://localhost:8181/panl-results-explainer/">http://localhost:8181/panl-results-explainer/</a></span><span class="c2 c15 c10">&nbsp;in your favourite browser, choose a collection and fieldset, paste the canonical URI path from the results viewer and an explanation of the parsing and decoding and the configuration will be presented.</span></p><p class="c99 c48"><span class="c55 c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="what-you-will-need.html#h.re4o64qtstgc" class="button small">Previous Page &laquo; <span>(What You Will Need)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="a-brief-introduction-to-solr.html#h.v78svwab541o" class="button small">Next Page &raquo; <span>(A Brief Introduction To Solr)</span></a></li>
 						</ul>
 					</footer>
 				</section>
