--- a/book/the-panl-response-object.html
+++ b/book/the-panl-response-object.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -1099,6 +1109,9 @@
 </ul><p class="c22 c24"><span class="c2 c15 c10">The flow chart below shows the logic for how the complete URI path for how a range facet is determined and generated</span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c22 c25 c24 c229"><span class="c2 c15 c10"></span></p><p class="c8 c215 c25"><span class="c2 c15 c10"></span></p><p class="c97 c48 c24 c215"><span style="overflow: hidden; display: inline-block; margin: 0.00px -0.00px; border: 1.33px dotted #000000; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px); width: 661.42px; height: 409.33px;"><img alt="" src="images/image27.png" style="width: 661.42px; height: 409.33px; margin-left: 0.00px; margin-top: 0.00px; transform: rotate(0.00rad) translateZ(0px); -webkit-transform: rotate(0.00rad) translateZ(0px);" title=""></span><span><br><br></span><span class="c95 c7">Flowchart:</span><span class="c95">&nbsp;Logic for generation of the URI path values for range suffixes</span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="panl-lpse-uri-paths-explained.html#h.rstp02sm86ve" class="button small">Previous Page &laquo; <span>(Panl LPSE URI Paths Explained)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="integrating-an-existing-solr-schema.html#h.4mejgx5kpgr4" class="button small">Next Page &raquo; <span>(Integrating An Existing Solr Schema)</span></a></li>
 						</ul>
 					</footer>
 				</section>
