--- a/book/what-you-will-need.html
+++ b/book/what-you-will-need.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -249,6 +259,9 @@
 </table><h2 class="c43" id="h.surp5zzh1gpg"><span class="c50 c10 c7">A Note On Panl Server Versions</span></h2><p class="c22 c24"><span>The </span><span class="c19 c15">solr-panl-9</span><span class="c2 c15 c10">&nbsp;designator is designed to integrate with Solr version 9.x.x.</span></p><p class="c22 c24"><span>If there are other integrations available with previous versions of Solr, then the Panl name will be suffixed with the major version number of the Solr release - i.e. </span><span class="c19 c15">solr-panl-8</span><span class="c2 c15 c10">&nbsp;is the release for Solr version 8.x.x, compiled against the Solr binaries for version 8.</span></p><p class="c22 c24"><span>As Panl translates URI paths to Solr query parameters, it </span><span class="c7">SHOULD </span><span class="c2 c15 c10">work with previous versions, however there may be incompatibilities with the SolrJ connectors.</span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c99 c48"><span class="c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="why-synapticloop-panl-.html#h.wxdbd3v1dui0" class="button small">Previous Page &laquo; <span>(Why Synapticloop Panl?)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="quick-start---the-5-steps.html#h.b0bn9es43b7b" class="button small">Next Page &raquo; <span>(Quick Start - The 5 Steps)</span></a></li>
 						</ul>
 					</footer>
 				</section>
