--- a/book/appendices.html
+++ b/book/appendices.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -153,6 +163,9 @@
 </div>
 					<footer>
 						<ul class="actions">
+							<li><a href="epilogue.html#h.b36b3ykcfa0f" class="button small">Previous Page &laquo; <span>(Epilogue)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							
 						</ul>
 					</footer>
 				</section>
