--- a/book/design-considerations.html
+++ b/book/design-considerations.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -355,6 +365,9 @@
   panl.status.500.verbose=false</span><span class="c2 c15 c10"><br></span></p><p class="c99 c48"><span class="c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="panl-cookbook.html#h.4d4gkix5isxn" class="button small">Previous Page &laquo; <span>(Panl Cookbook)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="code-flow.html#h.zggugnpwo64" class="button small">Next Page &raquo; <span>(Code Flow)</span></a></li>
 						</ul>
 					</footer>
 				</section>
