--- a/book/panl-configuration.html
+++ b/book/panl-configuration.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -1229,6 +1239,9 @@
   A Note On Field Validations</span></h3><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="getting-started.html#h.64jkm4cbn5ec" class="button small">Previous Page &laquo; <span>(Getting Started)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="how-it-all-fits-together.html#h.aghsxpd74ami" class="button small">Next Page &raquo; <span>(How It All Fits Together)</span></a></li>
 						</ul>
 					</footer>
 				</section>
