--- a/book/properties-quick-reference.html
+++ b/book/properties-quick-reference.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -2764,6 +2774,9 @@
 </table><p class="c22 c25 c24"><span class="c2 c15 c10"></span></p><p class="c99 c48"><span class="c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="integrating-an-existing-solr-schema.html#h.4mejgx5kpgr4" class="button small">Previous Page &laquo; <span>(Integrating An Existing Solr Schema)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="json-object-keys-quick-reference.html#h.kbwzd9tukbab" class="button small">Next Page &raquo; <span>(JSON Object Keys Quick Reference)</span></a></li>
 						</ul>
 					</footer>
 				</section>
