--- a/book/why-synapticloop-panl-.html
+++ b/book/why-synapticloop-panl-.html
@@ -84,6 +84,16 @@
 
 		table tbody td:nth-child(2) p { border-left: 0; }
 		table { border-collapse: separate !important; }
+		#content footer {
+			padding-top: 40px;
+		}
+		#content footer .actions li {
+			display: block;
+		}
+		#content footer .actions li a span {
+			text-transform: none;
+		  font-style: italic;
+		}
 	</style>
 </head>
 <body>
@@ -180,6 +190,9 @@
 </ul><p class="c22 c25"><span class="c2 c15 c10"></span></p><p class="c99 c48"><span class="c28 c115 c7">~ ~ ~ * ~ ~ ~</span></p>
 					<footer>
 						<ul class="actions">
+							<li><a href="readme-1st.html#h.9nn2kdob3kwu" class="button small">Previous Page &laquo; <span>(README.1ST)</span></a></li>
+							<li><a href="/panl/book/" class="button small alt">Table of Contents</a> <a href="#" class="button small alt">Back to the top</a></li>
+							<li><a href="what-you-will-need.html#h.re4o64qtstgc" class="button small">Next Page &raquo; <span>(What You Will Need)</span></a></li>
 						</ul>
 					</footer>
 				</section>
