--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 			<div class="row 200%">
 				<div class="8u 12u$(medium)">
 					<header class="major"><h2 id="panl">panl</h2>
+						<p>Turning a jumble of URL parameters into an SEO friendly URL.</p>
 						<p>A rather pleasing companion to the Apache® Solr® Faceted Search Engine.</p></header>
 					<p>Panl is an application that sits between your web application and Solr search server instance(s) that seamlessly converts human-readable, SEO friendly URLs into complex Solr search queries.</p>
 					<p>It abstracts away the complexities of the Solr search parameters, however some examples of the conversions are given should you wish to delve deeper into the inner-workings of the Panl server.</p>
