updated links on the index page

--- a/index.html
+++ b/index.html
@@ -119,28 +119,28 @@
 		<div class="icon-grid">
 			<div class="row uniform 150%">
 				<section class="3u 6u(large) 12u$(small)"><i class="icon fa-list-ol"></i>
-					<h3><a href="">Table of contents</a></h3>
-					<p>The list of everything</p>
+					<h3><a href="/panl/book/">Table of contents</a></h3>
+					<p><a href="/panl/book/">The list of everything</a></p>
 				</section>
 				<section class="3u 6u$(large) 12u$(small)"><i class="icon fa-fighter-jet"></i>
-					<h3><a href="">Quick Start</a></h3>
-					<p>Get up and running in 5 steps</p>
+					<h3><a href="/panl/book/quick-start---the-5-steps.html">Quick Start</a></h3>
+					<p><a href="/panl/book/quick-start---the-5-steps.html">Get up and running in 5 steps</a></p>
 				</section>
 				<section class="3u 6u$(large) 12u$(small)"><i class="icon fa-play"></i>
-					<h3><a href="">Getting started</a></h3>
-					<p>A more in-depth look at getting set up</p>
+					<h3><a href="/panl/book/getting-started.html">Getting started</a></h3>
+					<p><a href="/panl/book/getting-started.html">A more in-depth look at getting set up</a></p>
 				</section>
 				<section class="3u 6u$(large) 12u$(small)"><i class="icon fa-cogs"></i>
-					<h3><a href="">Panl configuration</a></h3>
-					<p>Configuring Panl to deliver the results you want</p>
-				</section>
-				<section class="3u 6u$(large) 12u$(small)"><i class="icon fa-asterisk"></i>
-					<h3><a href="">Quick reference</a></h3>
-					<p>Looking for a particular property?</p>
+					<h3><a href="/panl/book/panl-configuration.html">Panl configuration</a></h3>
+					<p><a href="/panl/book/panl-configuration.html">Configuring Panl to deliver the results you want</a></p>
 				</section>
 				<section class="3u 6u$(large) 12u$(small)"><i class="icon fa-wrench"></i>
-					<h3><a href="">Generate your configuration</a></h3>
-					<p>Have an existing Sol managed-schema file?</p>
+					<h3><a href="/panl/book/integrating-an-existing-solr-schema.html">Generate your configuration</a></h3>
+					<p><a href="/panl/book/integrating-an-existing-solr-schema.html">Have an existing Sol managed-schema file?</a></p>
+				</section>
+				<section class="3u 6u$(large) 12u$(small)"><i class="icon fa-asterisk"></i>
+					<h3><a href="/panl/book/properties-quick-reference.html">Properties Quick reference</a></h3>
+					<p><a href="/panl/book/properties-quick-reference.html">Looking for a particular property?</a></p>
 				</section>
 			</div>
 		</div>
