Added page titles

--- a/book/readme-1st.html
+++ b/book/readme-1st.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><title>Panl: Getting Started with Panl by synapticloop</title>
+<head><title>Panl: README.1ST - Getting Started with Panl by synapticloop</title>
 	<meta charset="utf-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1"/>
 	<!--[if lte IE 8]>
