Start of configuration and page regen - fixed UTF-8 output coding

--- a/book/the-panl-response-object.html
+++ b/book/the-panl-response-object.html
@@ -969,9 +969,9 @@
  <li class="c32 c108 li-bullet-0"><span class="c3">Clear all of the sorting options</span></li>
 </ol><h4 class="c85 c66" id="h.y80wr7ry8dno"><span class="c119 c12 c104">Rendering the Initial Sorting Options</span></h4><ol class="c42 lst-kix_y1zqe712eim-0 start" start="1">
  <li class="c4 li-bullet-0"><span>Iterate through the </span><span class="c1">available.sorting.fields</span><span class="c3">&nbsp;JSON array</span></li>
- <li class="c4 li-bullet-0"><span>Render the value keyed on </span><span class="c1">name</span><span>&nbsp;? output </span><span class="c1">Name</span></li>
- <li class="c66 c78 c224 li-bullet-0"><span>For the ascending link render the <br></span><span class="c1">&lt;CaFUPs&gt;&lt;set_uri_asc&gt;</span><span>&nbsp;? output </span><span class="c1">/mechanical-pencils/brandandname/11+grams/hexagonal/wsb+q/</span><span><br>
-   For the descending link render the<br></span><span class="c1">&lt;CaFUPs&gt;&lt;set_uri_desc&gt;</span><span>&nbsp;? output<br></span><span class="c1">/mechanical-pencils/brandandname/11+grams/hexagonal/wsb-q/</span></li>
+ <li class="c4 li-bullet-0"><span>Render the value keyed on </span><span class="c1">name</span><span>&nbsp;⇒ output </span><span class="c1">Name</span></li>
+ <li class="c66 c78 c224 li-bullet-0"><span>For the ascending link render the <br></span><span class="c1">&lt;CaFUPs&gt;&lt;set_uri_asc&gt;</span><span>&nbsp;⇒ output </span><span class="c1">/mechanical-pencils/brandandname/11+grams/hexagonal/wsb+q/</span><span><br>
+   For the descending link render the<br></span><span class="c1">&lt;CaFUPs&gt;&lt;set_uri_desc&gt;</span><span>&nbsp;⇒ output<br></span><span class="c1">/mechanical-pencils/brandandname/11+grams/hexagonal/wsb-q/</span></li>
 </ol><a id="t.eba61ded04f04436fac691715917caf9fb7258b7"></a><a id="t.120"></a><table class="c21">
  <tbody>
   <tr class="c5">
@@ -985,9 +985,9 @@
  <li class="c4 li-bullet-0"><span>Iterate through the </span><span class="c1">available.sorting.fields</span><span class="c3">&nbsp;JSON array</span></li>
  <li class="c4 li-bullet-0"><span>If the </span><span class="c1">set_uri_asc</span><span>&nbsp;or </span><span class="c1">set_uri_desc</span><span class="c3">&nbsp;key exists then</span></li>
 </ol><ol class="c42 lst-kix_2knqapsl7wrn-1 start" start="1">
- <li class="c32 c108 li-bullet-0"><span>Render the value keyed on </span><span class="c1">name</span><span>&nbsp;? output </span><span class="c1">Name</span></li>
- <li class="c224 c66 c108 li-bullet-0"><span>For the ascending link render the <br></span><span class="c1">&lt;CaFUPs&gt;&lt;add_uri_asc&gt;</span><span>&nbsp;? output </span><span class="c1">/mechanical-pencils/brandandname/11+grams/hexagonal/wsN+sb+q/</span><span><br>
-   For the descending link render the<br></span><span class="c1">&lt;CaFUPs&gt;&lt;add_uri_desc&gt;</span><span>&nbsp;? output<br></span><span class="c2 c41">/mechanical-pencils/brandandname/11+grams/hexagonal/wsN+sb+q/</span></li>
+ <li class="c32 c108 li-bullet-0"><span>Render the value keyed on </span><span class="c1">name</span><span>&nbsp;⇒ output </span><span class="c1">Name</span></li>
+ <li class="c224 c66 c108 li-bullet-0"><span>For the ascending link render the <br></span><span class="c1">&lt;CaFUPs&gt;&lt;add_uri_asc&gt;</span><span>&nbsp;⇒ output </span><span class="c1">/mechanical-pencils/brandandname/11+grams/hexagonal/wsN+sb+q/</span><span><br>
+   For the descending link render the<br></span><span class="c1">&lt;CaFUPs&gt;&lt;add_uri_desc&gt;</span><span>&nbsp;⇒ output<br></span><span class="c2 c41">/mechanical-pencils/brandandname/11+grams/hexagonal/wsN+sb+q/</span></li>
 </ol><h4 class="c66 c204 c231" id="h.egpcgrnjrn1g"><span class="c119 c12 c104">Example of Multi Sorting Display</span></h4><a id="t.ed264438fdbf1e76b3db396dfeb5bda0fd26eb95"></a><a id="t.121"></a><table class="c21">
  <tbody>
   <tr class="c5">
