Added in explain link to the results viewer and logic for displaying it on the results explainer

--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -23,7 +23,7 @@
 
 		<p>Available collections/fieldset URI Paths (CaFUPs): <br /><span id="available_collections"></span></p>
 
-		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong></p>
+		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong> <a href="#" id="explain-collection">[explain]</a></p>
 
 		<p><strong>Canonical URI: <span id="canonical_uri"></span></strong></p>
 
