Fixed multiple page numbers and numrows being passed through in the active filters

--- a/src/main/resources/panl-results/explainer/index.html
+++ b/src/main/resources/panl-results/explainer/index.html
@@ -11,6 +11,7 @@
 	<script src="/panl-results/static/panl-explainer.js"></script>
 	<link href="/panl-results/static/panl.css" rel="stylesheet" />
 	<link href="/panl-results/static/panl-explain.css" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="/panl-results/static/favicon.png" />
 </head>
 <body>
 <div id="container">
