--- a/src/main/resources/panl-results/viewer/index.html
+++ b/src/main/resources/panl-results/viewer/index.html
@@ -12,6 +12,7 @@
 	<link href="/panl-results/static/nouislider.min.css" rel="stylesheet" />
 	<script src="/panl-results/static/nouislider.min.js"></script>
 	<link href="/panl-results/static/panl.css" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="/panl-results/static/favicon.png" />
 </head>
 <body>
 <div id="container">
