--- a/book/appendices.html
+++ b/book/appendices.html
@@ -96,6 +96,14 @@
 		}
 	</style>
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6JH94WWTV"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-Q6JH94WWTV');
+</script>
 <body>
 <div id="header"><h1 id="logo"><a href="http://synapticloop.github.io/">Synapticloop</a> :: <a href="/panl/">Panl</a></h1>
 	<nav id="nav">
