--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 	<!--[if lte IE 8]>
 	<link rel="stylesheet" href="assets/css/ie8.css"/><![endif]-->
 </head>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Q6JH94WWTV"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'G-Q6JH94WWTV');
+</script>
 <body class="landing">
 <div id="header" class="alt">
 	<p>Search Engine Friendly, Friendly Search Engine</p>
