updated the link to the collection

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 				<section class="4u 6u$(large) 12u$(small)"><i class="icon fa-pencil"></i>
 					<h3>Peruse the collection</h3>
 					<p>See the statically generated site powered by the Panl server.</p>
-					<p><a href="#">Mechanical pencils...</a></p>
+					<p><a href="/panl/mechanical-pencils/browse/">Mechanical pencils...</a></p>
 				</section>
 			</div>
 		</div>
