--- a/src/main/resources/panl-results/explainer/index.html
+++ b/src/main/resources/panl-results/explainer/index.html
@@ -17,7 +17,7 @@
 <div id="container">
 	<div id="header">
 		<h1>Panl</h1>
-		<h2><em>a very simple results explainer</em></h2>
+		<h2><em>a very simple results explainer (or <a href="/panl-results-viewer/">viewer</a> or <a href="/panl-single-page-search/">single page search</a>)</em></h2>
 
 		<hr />
 
