--- a/src/main/resources/panl-results/single-page-search/index.html
+++ b/src/main/resources/panl-results/single-page-search/index.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<script src="/panl-results/static/jquery-3.7.1.min.js"></script>
-	<script src="/panl-results/static/panl-configuration.js"></script>
+	<script src="/panl-results/static/panl-single-page-search.js"></script>
 
 	<link href="/panl-results/static/nouislider.min.css" rel="stylesheet" />
 	<script src="/panl-results/static/nouislider.min.js"></script>
@@ -19,7 +19,7 @@
 <div id="container">
 	<div id="header">
 		<h1>Panl</h1>
-		<h2><em>a single page search interface</em></h2>
+		<h2><em>a very simple single search page  (or <a href="/panl-results-viewer/">viewer</a> or <a href="/panl-results-explainer/">explainer</a>)</em></h2>
 
 		<hr />
 
