Renamed from panl-results to webapp

--- a/src/main/resources/webapp/explainer/index.html
+++ b/src/main/resources/webapp/explainer/index.html
@@ -7,11 +7,11 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap" rel="stylesheet">
-	<script src="/panl-results/static/jquery-3.7.1.min.js"></script>
-	<script src="/panl-results/static/panl-explainer.js"></script>
-	<link href="/panl-results/static/panl.css" rel="stylesheet" />
-	<link href="/panl-results/static/panl-explain.css" rel="stylesheet" />
-	<link rel="icon" type="image/png" href="/panl-results/static/favicon.png" />
+	<script src="/webapp/static/jquery-3.7.1.min.js"></script>
+	<script src="/webapp/static/panl-explainer.js"></script>
+	<link href="/webapp/static/panl.css" rel="stylesheet" />
+	<link href="/webapp/static/panl-explain.css" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="/webapp/static/favicon.png" />
 </head>
 <body>
 <div id="container">
