--- a/src/main/resources/webapp/single-page-search/index.html
+++ b/src/main/resources/webapp/single-page-search/index.html
@@ -6,14 +6,14 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-	<script src="/panl-results/static/jquery-3.7.1.min.js"></script>
-	<script src="/panl-results/static/panl-single-page-search.js"></script>
+	<script src="/webapp/static/jquery-3.7.1.min.js"></script>
+	<script src="/webapp/static/panl-single-page-search.js"></script>
 
-	<link href="/panl-results/static/nouislider.min.css" rel="stylesheet" />
-	<script src="/panl-results/static/nouislider.min.js"></script>
-	<link href="/panl-results/static/panl.css" rel="stylesheet" />
-	<link href="/panl-results/static/panl-single-page-search.css" rel="stylesheet" />
-	<link rel="icon" type="image/png" href="/panl-results/static/favicon.png" />
+	<link href="/webapp/static/nouislider.min.css" rel="stylesheet" />
+	<script src="/webapp/static/nouislider.min.js"></script>
+	<link href="/webapp/static/panl.css" rel="stylesheet" />
+	<link href="/webapp/static/panl-single-page-search.css" rel="stylesheet" />
+	<link rel="icon" type="image/png" href="/webapp/static/favicon.png" />
 </head>
 <body>
 <div id="container">
