Added in PANL LPSE link generation to the search results

--- a/src/main/resources/webapp/single-page-search/index.html
+++ b/src/main/resources/webapp/single-page-search/index.html
@@ -24,10 +24,7 @@
 		<hr />
 
 		<p><span id="available_collections"></span></p>
-	</div>
-	<div id="wrapper">
-		<div id="content">
-		</div>
+		<p><strong>Panl LPSE encoded path:</strong><br /><span id="panl-lpse-path"></span></p>
 	</div>
 
 	<div id="searchfields">
@@ -35,6 +32,8 @@
 	<div id="searcharea">
 
 		<hr />
+
+		<p><strong>Click the button below to view the results in the Panl Results Viewer web app:</strong><br /><span id="panl-lpse-path-searchbutton"></span></p>
 
 		<br />
 		<a href="#" id="searchbutton">Search</a>
