Fixed link for downloading book

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<section class="4u 6u(large) 12u$(small)"><i class="icon fa-book"></i>
 					<h3>Read Offline</h3>
 					<p>Prefer a PDF all on one to print or take with you?</p>
-					<p><a href="#">Download the book...</a></p>
+					<p><a href="https://github.com/synapticloop/panl/releases/">Download the book...</a></p>
 				</section>
 				<section class="4u 6u$(large) 12u$(small)"><i class="icon fa-copy"></i>
 					<h3>Read online</h3>
