--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -7,11 +7,13 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<script src="/webapp/static/jquery-3.7.1.min.js"></script>
+	<script src="/webapp/static/jquery-ui.min.js"></script>
 	<script src="/webapp/static/panl-viewer.js"></script>
 
 	<link href="/webapp/static/nouislider.min.css" rel="stylesheet" />
 	<script src="/webapp/static/nouislider.min.js"></script>
 	<link href="/webapp/static/panl.css" rel="stylesheet" />
+	<link href="/webapp/static/jquery-ui.min.css" rel="stylesheet" />
 	<link rel="icon" type="image/png" href="/webapp/static/favicon.png" />
 </head>
 <body>
