--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -8,7 +8,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<script src="/webapp/static/jquery-3.7.1.min.js"></script>
 	<script src="/webapp/static/jquery-ui.min.js"></script>
-	<script src="/webapp/static/panl-viewer.js"></script>F
+	<script src="/webapp/static/panl-viewer.js"></script>
 
 	<link href="/webapp/static/nouislider.min.css" rel="stylesheet" />
 	<script src="/webapp/static/nouislider.min.js"></script>
