Updated HTML look and feel, and README document and screenshot

--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -37,7 +37,7 @@
 			<div class="padding">
 				<p>
 					<span id="num_results" class="left"><strong>Search Results</strong> </span>
-					<span id="query_operand" class="right"><strong>q.op</strong> </span>
+					<span id="query_operand" class="right"><strong>Query Operand (q.op)</strong> </span>
 				</p>
 			</div>
 			<p class="clear">
@@ -67,6 +67,7 @@
 
 		<p class="navheading"><strong>Active Filters</strong></p>
 		<ul id="active"></ul>
+		<p id="activesort" class="navheading"></p>
 
 		<p id="ranges-marker" class="hidden navheading"><strong>Range Filters</strong></p>
 		<div id="ranges"></div>
