--- a/src/main/resources/webapp/single-page-search/index.html
+++ b/src/main/resources/webapp/single-page-search/index.html
@@ -7,7 +7,7 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
 	<script src="/webapp/static/jquery-3.7.1.min.js"></script>
-	<script src="/webapp/static/panl-single-page-search.js"></script>
+	<script src="/webapp/static/panl-single-page-search.js" type="module"></script>
 
 	<link href="/webapp/static/nouislider.min.css" rel="stylesheet" />
 	<script src="/webapp/static/nouislider.min.js"></script>
