Added in Panl server response and message (in case of error)

--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -10,11 +10,11 @@
 	<script src="/webapp/static/jquery-ui.min.js"></script>
 	<script src="/webapp/static/panl-viewer.js" type="module"></script>
 
-	<link href="/webapp/static/nouislider.min.css" rel="stylesheet" />
+	<link href="/webapp/static/nouislider.min.css" rel="stylesheet"/>
 	<script src="/webapp/static/nouislider.min.js"></script>
-	<link href="/webapp/static/panl.css" rel="stylesheet" />
-	<link href="/webapp/static/jquery-ui.min.css" rel="stylesheet" />
-	<link rel="icon" type="image/png" href="/webapp/static/favicon.png" />
+	<link href="/webapp/static/panl.css" rel="stylesheet"/>
+	<link href="/webapp/static/jquery-ui.min.css" rel="stylesheet"/>
+	<link rel="icon" type="image/png" href="/webapp/static/favicon.png"/>
 </head>
 <body>
 <div id="container">
@@ -23,13 +23,19 @@
 
 		<h2><em>a very simple results viewer (or <a href="/panl-results-explainer/">explainer</a> or <a href="/panl-single-page-search/">single page search</a>)</em></h2>
 
-		<hr />
+		<hr/>
 
-		<p>Available collections/fieldset URI Paths (CaFUPs): <br /><span id="available_collections"></span></p>
+		<h3>Panl server response code: <span id="response_code"></span></h3>
+
+		<p><strong>~ ~ ~ * ~ ~ ~</strong></p>
+
+		<p>Available collections/fieldset URI Paths (CaFUPs): <br/><span id="available_collections"></span></p>
 
 		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong></p>
 
-		<p><strong>Canonical URI: <span id="canonical_uri"></span></strong> <a href="#" id="explain-collection">[explain]</a></p>
+		<p><strong>Canonical URI: <span id="canonical_uri"></span></strong> <a href="#"
+																																					 id="explain-collection">[explain]</a>
+		</p>
 
 	</div>
 	<div id="wrapper">
