--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -31,10 +31,11 @@
 
 		<p>Available collections/fieldset URI Paths (CaFUPs): <br/><span id="available_collections"></span></p>
 
+		<p><strong>~ ~ ~ * ~ ~ ~</strong></p>
+
 		<p><strong>You are viewing collection/fieldset URI Path (CaFUP): <span id="collection"></span></strong></p>
 
-		<p><strong>Canonical URI: <span id="canonical_uri"></span></strong> <a href="#"
-																																					 id="explain-collection">[explain]</a>
+		<p><strong>Canonical URI: <span id="canonical_uri"></span></strong> <a href="#" id="explain-collection">[explain]</a>
 		</p>
 
 	</div>
