Start of checkbox integration

--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -77,6 +77,9 @@
 		<ul id="active"></ul>
 		<p id="activesort" class="navheading"></p>
 
+		<p class="navheading"><strong>Checkboxes</strong></p>
+		<ul id="boolean-checkbox"></ul>
+
 		<p id="ranges-marker" class="hidden navheading"><strong>Range Filters</strong></p>
 		<div id="ranges"></div>
 
