Added JSON response and checkbox implementation

--- a/src/main/resources/webapp/viewer/index.html
+++ b/src/main/resources/webapp/viewer/index.html
@@ -71,6 +71,7 @@
 		<form method="GET">
 			<label><input id="searchfield" type="text" name="search" disabled="disabled"/></label>
 			<button id="searchbutton" type="submit" disabled="disabled">Search</button>
+			<div id="search-checkboxes"></div>
 		</form>
 
 		<p class="navheading"><strong>Active Filters</strong></p>
